force-app/main/default/objects/Check_In_Resources__c/Check_In_Resources__c.object-meta.xml
<CustomObject>
    <label>BT Check-In Resource Log</label>
    <nameField>
        <displayFormat>CIL-{0000}</displayFormat>
        <label>Check-In Resource Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Check-In Resource Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>