force-app/main/default/objects/Check_In_Resources__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <inlineHelpText>Check-In the Resource is associated with.</inlineHelpText>
    <label>Check-In</label>
    <referenceTo>Check_In__c</referenceTo>
    <relationshipName>Check_In_Resource_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>