force-app/main/default/objects/Check_In_Resources__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Code</label>
    <referenceTo>Cost_Codes__c</referenceTo>
    <relationshipName>Check_In_Resource_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>